upgraded babel to 7.x, updated readme

--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,16 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/env",
       {
         "targets": {
           "node": "12"
-        },
-        "useBuiltIns": true,
-        "debug": false
+        }
       }
-    ],
-    "stage-2"
+    ]
+  ],
+  "plugins": [
+    "@babel/plugin-transform-runtime"
   ],
   "env": {
     "test": {
