--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "lib"
   ],
   "scripts": {
-    "build": "babel src --out-dir lib",
+    "build": "npm run clean && npm run compile",
+    "compile": "babel src --out-dir lib",
     "clean": "rm -rf .nyc_output/ lib/ coverage/",
     "lint": "npm run lint:js",
     "lint:js": "eslint --fix --format=node_modules/eslint-formatter-pretty .",
     "lint:staged": "lint-staged",
     "pretest": "npm run clean && npm run lint",
     "test": "better-npm-run test",
-    "prepublishOnly": "babel src --out-dir lib"
+    "prepublishOnly": "npm run build"
   },
   "betterScripts": {
     "test": {
-      "command": "nyc mocha --require babel-register --recursive \"./test/helper.js\" \"./test/unit/**/*.test.js\"",
+      "command": "nyc mocha --recursive \"./test/unit/**/*.test.js\"",
       "env": {
         "AWS_REGION": "us-west-2",
         "NODE_ENV": "test"
@@ -48,12 +49,13 @@
   "devDependencies": {
     "aws-sdk": "^2.578.0",
     "aws-sdk-mock": "^4.5.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^10.0.3",
-    "babel-plugin-istanbul": "^4.1.6",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "@babel/cli": "^7.10.0",
+    "@babel/core": "^7.10.0",
+    "@babel/preset-env": "^7.10.0",
+    "@babel/register": "^7.10.0",
+    "@babel/plugin-transform-runtime": "^7.10.0",
+    "babel-plugin-istanbul": "^5.2.0",
+    "babel-eslint": "^10.0.0",
     "better-npm-run": "^0.1.1",
     "chai": "^4.2.0",
     "eslint": "^6.7.0",
@@ -67,6 +69,7 @@
     "sinon-chai": "^3.3.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.10.0",
     "bluebird": "^3.7.1",
     "debug": "^4.1.1",
     "highland": "^2.13.5",
