--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "debug": "^4.1.1",
     "highland": "^2.13.5",
     "lodash": "^4.17.15",
+    "memory-cache": "^0.2.0",
     "uuid": "^3.3.3"
   }
 }
