--- a/templates/control-service/package.json
+++ b/templates/control-service/package.json
@@ -27,10 +27,10 @@
       }
     },
     "test:int": {
-      "command": "npm start -- --exec \"mocha --timeout 20000 --recursive \"./test/int/**/*.test.js\"\"",
+      "command": "npm start -- --exec \"mocha --timeout 20000 --require @babel/register --recursive ./test/helper.js \"./test/int/**/*.test.js\"\"",
       "env": {
         "NODE_ENV": "test",
-        "AWS_REGION": "us-west-2",
+        "AWS_REGION": "us-east-1",
         "DEBUG": "handler"
       }
     }
@@ -40,16 +40,17 @@
   },
   "pre-commit": "lint:staged",
   "devDependencies": {
+    "@babel/cli": "^7.10.0",
+    "@babel/core": "^7.10.0",
+    "@babel/plugin-transform-runtime": "^7.10.0",
+    "@babel/preset-env": "^7.10.0",
+    "@babel/register": "^7.10.0",
     "aws-assume-role-cicd": "^1.0.0",
     "aws-sdk": "^2.94.0",
     "aws-sdk-mock": "^4.2.0",
-    "@babel/cli": "^7.10.0",
-    "@babel/core": "^7.10.0",
-    "@babel/preset-env": "^7.10.0",
-    "@babel/register": "^7.10.0",
-    "@babel/plugin-transform-runtime": "^7.10.0",
-    "babel-plugin-istanbul": "^5.2.0",
     "babel-eslint": "^10.0.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-istanbul": "^5.2.0",
     "baton-vcr-replay-for-aws-sdk": "^1.0.1",
     "baton-vcr-serverless-plugin": "^1.0.0",
     "better-npm-run": "0.1.0",
@@ -76,7 +77,7 @@
   "dependencies": {
     "@babel/runtime": "^7.10.0",
     "aws-kms-ee": "^0.6.0",
-    "aws-lambda-stream": "file:../..",
+    "aws-lambda-stream": "file:../../../aws-lambda-stream-build",
     "bluebird": "^3.4.7",
     "debug": "^3.1.0",
     "highland": "^2.13.0",
