--- a/templates/rest-bff-service/package.json
+++ b/templates/rest-bff-service/package.json
@@ -31,46 +31,50 @@
       "env": {
         "NODE_ENV": "test",
         "AWS_REGION": "us-east-1",
-        "DEBUG": "handler"
+        "KMS_REGIONS": "us-east-1,us-west-2",
+        "DEBUG": "tbd"
       }
     }
   },
   "lint-staged": {
     "*.js": "eslint"
   },
-  "pre-commit": "lint:staged",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "devDependencies": {
     "@babel/cli": "^7.10.0",
-    "@babel/core": "^7.10.0",
-    "@babel/plugin-transform-runtime": "^7.10.0",
-    "@babel/preset-env": "^7.10.0",
-    "@babel/register": "^7.10.0",
+    "@babel/core": "^7.8.0",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.0",
+    "@babel/register": "^7.8.0",
     "aws-assume-role-cicd": "^1.0.0",
-    "aws-sdk": "^2.751.0",
-    "aws-sdk-mock": "^4.2.0",
+    "aws-sdk": "^2.451.0",
+    "aws-sdk-mock": "^5.1.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^5.2.0",
     "baton-vcr-replay-for-aws-sdk": "^1.0.1",
     "baton-vcr-serverless-plugin": "^1.0.0",
-    "better-npm-run": "0.1.0",
+    "better-npm-run": "^0.1.1",
     "chai": "^4.0.0",
-    "eslint": "^4.18.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-formatter-pretty": "^1.3.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-formatter-pretty": "^3.0.0",
     "eslint-plugin-import": "^2.9.0",
-    "lint-staged": "^7.0.0",
-    "mocha": "^5.2.0",
-    "nyc": "^11.8.0",
-    "pre-commit": "^1.2.2",
+    "mocha": "^8.0.1",
+    "nyc": "^14.1.1",
+    "husky": "^4.2.5",
     "serverless": "^1.26.0",
     "serverless-dynamodb-autoscaling-plugin": "1.0.0",
     "serverless-dynamodb-global-table-plugin": "1.0.1",
     "serverless-multi-regional-plugin": "^1.0.5",
-    "serverless-offline": "^4.5.0",
+    "serverless-offline": "^5.0.0",
     "serverless-webpack": "^5.0.0",
-    "sinon": "^7.2.4",
-    "sinon-chai": "^3.1.0",
+    "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
     "supertest": "^3.1.0",
     "webpack": "^4.1.1",
     "webpack-node-externals": "^1.6.0"
@@ -79,15 +83,13 @@
     "@babel/runtime": "^7.10.0",
     "aws-kms-ee": "^0.6.0",
     "aws-lambda-stream": "^0.5.0",
-    "bluebird": "^3.4.7",
+    "bluebird": "^3.7.2",
     "debug": "^3.1.0",
-    "dynamodb-toolbox": "^0.2.0-beta.1",
     "highland": "^2.13.0",
     "lambda-api": "^0.10.6",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "regenerator-runtime": "^0.12.1",
     "serverless-datadog-metrics": "^1.0.1",
-    "uuid": "^3.2.1"
+    "uuid": "^8.3.0"
   }
 }
