--- a/templates/control-service/serverless.yml
+++ b/templates/control-service/serverless.yml
@@ -115,3 +115,5 @@ resources:
         TimeToLiveSpecification:
           AttributeName: ttl
           Enabled: true
+        # SSESpecification:
+        #   SSEEnabled: true
