--- a/templates/rest-bff-service/serverless.yml
+++ b/templates/rest-bff-service/serverless.yml
@@ -147,3 +147,5 @@ resources:
         TimeToLiveSpecification:
           AttributeName: ttl
           Enabled: true
+        # SSESpecification:
+        #   SSEEnabled: true
