added topic to fault monitor

--- a/templates/event-fault-monitor/includes.yml
+++ b/templates/event-fault-monitor/includes.yml
@@ -1,3 +1,61 @@
+Topic:
+  Type: AWS::SNS::Topic
+  Properties:
+    TopicName: ${self:service}-${opt:stage}-bucket-topic
+
+TopicPolicy:
+  Type: AWS::SNS::TopicPolicy
+  Properties:
+    PolicyDocument:
+      Statement:
+        - Effect: Allow
+          Principal:
+            Service: s3.amazonaws.com
+          Action:
+            - SNS:Publish
+          Resource:
+            Ref: Topic
+          Condition:
+            ArnLike:
+              aws:SourceArn: arn:aws:s3:::${self:service}-${opt:stage}-bucket-*
+    Topics:
+      - Ref: Topic
+
+NotificationConfiguration:
+  TopicConfigurations:
+    - Event: s3:ObjectCreated:Put
+      Topic:
+        Ref: Topic
+
+Queue:
+  Type: AWS::SQS::Queue
+QueuePolicy:
+  Type: AWS::SQS::QueuePolicy
+  Properties:
+    Queues:
+      - Ref: Queue
+    PolicyDocument:
+      Statement:
+        - Effect: Allow
+          Principal:
+            Service: sns.amazonaws.com
+          Action: sqs:SendMessage
+          Resource:
+            Fn::GetAtt: [ Queue, Arn ]
+          Condition:
+            ArnEquals:
+              aws:SourceArn:
+                Ref: Topic
+
+Subscription:
+  Type: AWS::SNS::Subscription
+  Properties:
+    Protocol: sqs
+    Endpoint:
+      Fn::GetAtt: [ Queue, Arn ]
+    TopicArn:
+      Ref: Topic
+
 CloudWatchLoggingOptions: 
   Enabled: true
   LogGroupName:
@@ -67,4 +125,3 @@ DeliveryRole:
                 - logs:PutLogEvents
               Resource:
                 - Fn::GetAtt: [ LogGroup, Arn ]
-
