--- a/templates/control-service/package.json
+++ b/templates/control-service/package.json
@@ -8,14 +8,19 @@
     "lint:staged": "lint-staged",
     "pretest": "npm run clean && npm run lint",
     "test": "better-npm-run test",
-    "test:int": "eval \"$(assume-role) better-npm-run test:int\"",
+    "test:int": "better-npm-run test:int",
+    "test:int:ci": "eval \"$(assume-role) npm run test:int\"",
     "start": "sls offline --port 3001 --apiKey test-int-api-key-123456 -r us-east-1 -s stg --acct dev",
     "dp:lcl": "sls deploy -v -r us-east-1 --acct dev",
     "rm:lcl": "sls remove -r us-east-1 --acct dev",
-    "dp:stg:e": "eval \"$(assume-role) sls deploy -v -r us-east-1 -s stg --acct dev --force\"",
-    "dp:stg:w": "eval \"$(assume-role) sls deploy -v -r us-west-2 -s stg --acct dev --force\"",
-    "dp:prd:e": "eval \"$(assume-role) sls deploy -v -r us-east-1 -s prd --acct prod --force\"",
-    "dp:prd:w": "eval \"$(assume-role) sls deploy -v -r us-west-2 -s prd --acct prod --force\""
+    "dp:stg:e": "sls deploy -v -r us-east-1 -s stg --acct dev --force",
+    "dp:stg:w": "sls deploy -v -r us-west-2 -s stg --acct dev --force",
+    "dp:prd:e": "sls deploy -v -r us-east-1 -s prd --acct prod --force",
+    "dp:prd:w": "sls deploy -v -r us-west-2 -s prd --acct prod --force",
+    "dp:stg:e:ci": "eval \"$(assume-role) npm run dp:stg:e\"",
+    "dp:stg:w:ci": "eval \"$(assume-role) npm run dp:stg:w\"",
+    "dp:prd:e:ci": "eval \"$(assume-role) npm run dp:prd:e\"",
+    "dp:prd:w:ci": "eval \"$(assume-role) npm run dp:prd:w\""
   },
   "betterScripts": {
     "test": {
