--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-lambda-stream",
-  "version": "0.15.0",
+  "version": "0.16.0",
   "description": "Create stream processors with AWS Lambda functions.",
   "keywords": [
     "aws",
@@ -69,6 +69,9 @@
     "nyc": "^14.1.1",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0"
+  },
+  "peerDependencies": {
+    "aws-kms-ee": "^0.7.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.10.0",
