--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-lambda-stream",
-  "version": "0.16.0",
+  "version": "0.17.0",
   "description": "Create stream processors with AWS Lambda functions.",
   "keywords": [
     "aws",
@@ -68,12 +68,7 @@
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "sinon": "^7.5.0",
-    "sinon-chai": "^3.3.0"
-  },
-  "peerDependencies": {
-    "aws-kms-ee": "^0.7.0"
-  },
-  "dependencies": {
+    "sinon-chai": "^3.3.0",
     "@babel/runtime": "^7.10.0",
     "aws-kms-ee": "^0.7.0",
     "bluebird": "^3.7.1",
@@ -84,5 +79,18 @@
     "memory-cache": "^0.2.0",
     "node-fetch": "^2.6.1",
     "uuid": "^3.3.3"
-  }
+  },
+  "peerDependencies": {
+    "@babel/runtime": "^7.10.0",
+    "aws-kms-ee": "^0.7.0",
+    "bluebird": "^3.7.1",
+    "debug": "^4.1.1",
+    "highland": "^2.13.5",
+    "isomorphic-fetch": "^3.0.0",
+    "lodash": "^4.17.15",
+    "memory-cache": "^0.2.0",
+    "node-fetch": "^2.6.1",
+    "uuid": "^3.3.3"
+  },
+  "dependencies": {}
 }
