--- a/templates/control-service/package.json
+++ b/templates/control-service/package.json
@@ -50,7 +50,7 @@
     "@babel/plugin-transform-runtime": "^7.10.0",
     "@babel/preset-env": "^7.10.0",
     "@babel/register": "^7.10.0",
-    "aws-assume-role-cicd": "^1.0.0",
+    "aws-assume-role-cicd": "^1.0.4",
     "aws-sdk": "^2.94.0",
     "aws-sdk-mock": "^4.2.0",
     "babel-eslint": "^10.0.0",
@@ -81,13 +81,16 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.0",
-    "aws-kms-ee": "^0.6.0",
-    "aws-lambda-stream": "^0.6.0",
+    "aws-kms-ee": "^0.8.0",
+    "aws-lambda-stream": "^0.18.0",
     "bluebird": "^3.4.7",
-    "debug": "^3.1.0",
+    "debug": "^4.1.0",
     "highland": "^2.13.0",
-    "lodash": "^4.17.11",
+    "isomorphic-fetch": "^3.0.0",
+    "lodash": "^4.17.15",
+    "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
+    "node-fetch": "^2.6.1",
     "regenerator-runtime": "^0.12.1",
     "serverless-datadog-metrics": "^1.0.1",
     "uuid": "^3.2.1"
