--- a/templates/control-service/serverless.yml
+++ b/templates/control-service/serverless.yml
@@ -20,10 +20,17 @@ provider:
   iamRoleStatements:
     - Effect: Allow
       Action:
+        # - dynamodb:BatchGetItem
         - dynamodb:PutItem
+        # - dynamodb:UpdateItem
         - dynamodb:Query
       Resource:
-        Fn::GetAtt: [ EventsTable, Arn ]
+        - Fn::GetAtt: [ EventsTable, Arn ]
+        # - Fn::Join:
+        #     - '/'
+        #     - - Fn::GetAtt: EventsTable.Arn
+        #       - index
+        #       - DataIndex        
     - Effect: Allow
       Action:
         - events:PutEvents
@@ -81,7 +88,8 @@ functions:
 resources:
   Resources:
     EventsTable:
-      Type: AWS::DynamoDB::Table
+      Type: AWS::DynamoDB::GlobalTable
+      # DeletionPolicy: Retain
       Properties:
         TableName: ${self:provider.environment.EVENT_TABLE_NAME}
         AttributeDefinitions:
@@ -109,6 +117,8 @@ resources:
         #         KeyType: RANGE
         #     Projection:
         #       ProjectionType: ALL
+        Replicas:
+          - Region: ${opt:region}
         BillingMode: PAY_PER_REQUEST
         StreamSpecification:
           StreamViewType: NEW_AND_OLD_IMAGES
