--- a/templates/rest-bff-service/package.json
+++ b/templates/rest-bff-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-rest-bff-service",
+  "name": "my-bff-service",
   "private": true,
   "scripts": {
     "clean": "rm -rf .nyc_output/ .webpack/ .serverless/ coverage/",
@@ -50,7 +50,7 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.0",
     "@babel/register": "^7.8.0",
-    "aws-assume-role-cicd": "^1.0.0",
+    "aws-assume-role-cicd": "^1.0.4",
     "aws-sdk": "^2.451.0",
     "aws-sdk-mock": "^5.1.0",
     "babel-eslint": "^10.0.0",
@@ -64,9 +64,9 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-formatter-pretty": "^3.0.0",
     "eslint-plugin-import": "^2.9.0",
+    "husky": "^4.2.5",
     "mocha": "^8.0.1",
     "nyc": "^14.1.1",
-    "husky": "^4.2.5",
     "serverless": "^1.26.0",
     "serverless-dynamodb-autoscaling-plugin": "1.0.0",
     "serverless-dynamodb-global-table-plugin": "1.0.1",
@@ -81,14 +81,17 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.0",
-    "aws-kms-ee": "^0.6.0",
-    "aws-lambda-stream": "^0.5.0",
+    "aws-kms-ee": "^0.8.0",
+    "aws-lambda-stream": "^0.18.0",
     "bluebird": "^3.7.2",
-    "debug": "^3.1.0",
+    "debug": "^4.1.0",
     "highland": "^2.13.0",
+    "isomorphic-fetch": "^3.0.0",
     "lambda-api": "^0.10.6",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
+    "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
+    "node-fetch": "^2.6.1",
     "serverless-datadog-metrics": "^1.0.1",
     "uuid": "^8.3.0"
   }
