--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/plugin-transform-runtime": "^7.10.0",
     "@babel/preset-env": "^7.10.0",
     "@babel/register": "^7.10.0",
+    "aws-kms-ee": "^0.12.0",
     "aws-sdk": "^2.578.0",
     "aws-sdk-mock": "^4.5.0",
     "babel-eslint": "^10.0.0",
