--- a/templates/event-hub/serverless.yml
+++ b/templates/event-hub/serverless.yml
@@ -1,189 +1,26 @@
-service: event-hub
+service: ${self:custom.subsys}-event-hub
 
 provider:
   name: aws
-  # cfnRole: arn:aws:iam::${self:custom.accounts.${opt:acct}.accountNumber}:role/cfnRole
-  # deploymentBucket: myprefix-${opt:acct}-${opt:region}-serverlessdeploymentbucket
+  # deploymentBucket: ${file(serverless/cfn.yml):deploymentBucket}
+  # iam:
+  #   deploymentRole: ${file(serverless/cfn.yml):deploymentRole}
+  stackTags: ${file(serverless/tags.yml)}
+
+params: ${file(serverless/config.yml):params}
 
 custom:
-  accounts:
-    dev:
-      # accountNumber: 123456789012
-      shardCount: 1
-      # ingressShardCount: 1
-      # egressBuses:
-        # add an arn for each downstream subsystem
-        # y: arn:aws:events:us-east-1:123456789012:event-bus/${opt:stage}-${self:service}-bus
-    prod:
-      # accountNumber: 123456789012
-      shardCount: 1
-      # ingressShardCount: 1
-      # egressBuses:
-        # y: arn:aws:events:us-east-1:123456789012:event-bus/${opt:stage}-${self:service}-bus
+  partition: aws # aws-us-gov
+  org: my
+  subsys: subsys1
+  # global: ${file(serverless/global.yml):global}
 
 resources:
-  Resources:
-    Bus:
-      Type: AWS::Events::EventBus
-      Properties:
-        Name: ${opt:stage}-${self:service}-bus
-
-    # ----------
-    # STREAMS
-    # ----------
-
-    Stream1:
-      Type: AWS::Kinesis::Stream
-      Properties:
-        Name: ${opt:stage}-${self:service}-s1
-        RetentionPeriodHours: 24
-        ShardCount: ${self:custom.accounts.${opt:acct}.shardCount}
-
-    # Stream1Consumer1:
-    #   Type: AWS::Kinesis::StreamConsumer
-    #   Properties:
-    #     ConsumerName: ${opt:stage}-${self:service}-s1-c1
-    #     StreamARN:
-    #       Fn::GetAtt: [ Stream1, Arn ]
-
-    # IngressStream:
-    #   Type: AWS::Kinesis::Stream
-    #   Properties:
-    #     Name: ${opt:stage}-${self:service}-ingress
-    #     RetentionPeriodHours: 24
-    #     ShardCount: ${self:custom.accounts.${opt:acct}.ingressShardCount}
-
-    # ----------
-    # POLICIES
-    # ----------
-
-    BusRole:
-      Type: AWS::IAM::Role
-      Properties:
-        AssumeRolePolicyDocument:
-          Statement:
-            - Effect: Allow
-              Principal:
-                Service: events.amazonaws.com
-              Action: sts:AssumeRole
-        Policies:
-          - PolicyName: internal
-            PolicyDocument:
-              Statement:
-                - Effect: Allow
-                  Action:
-                    - kinesis:PutRecord
-                    - kinesis:PutRecords
-                  Resource:
-                    - Fn::GetAtt: [ Stream1, Arn ]
-                    # - Fn::GetAtt: [ Stream2, Arn ]
-                    # - Fn::GetAtt: [ IngressStream, Arn ]
-          # - PolicyName: egress
-          #   PolicyDocument:
-          #     Statement:
-          #       - Effect: Allow
-          #         Action:
-          #           - events:PutEvents
-          #         Resource:
-          #           # add an arn for each downstream subsystem
-          #           - ${self:custom.accounts.${opt:acct}.egressBuses.y}
-
-    # add a policy for each upstream subsystem
-    # EventBusPolicyForSubsystemX:
-    #   Type: AWS::Events::EventBusPolicy
-    #   Properties:
-    #     EventBusName:
-    #       Ref: Bus
-    #     Action: events:PutEvents
-    #     Principal: 123456789012
-    #     StatementId: SubsystemX
-
-    # ----------
-    # RULES
-    # ----------
-
-    Stream1EventRule:
-      Type: AWS::Events::Rule
-      Properties:
-        EventBusName:
-          Ref: Bus
-        EventPattern:
-          # source:
-          #   - anything-but: external
-          detail:
-            type:
-              - anything-but: fault
-        State: ENABLED
-        Targets:
-          - Id: Stream1
-            Arn:
-              Fn::GetAtt: [ Stream1, Arn ]
-            RoleArn:
-              Fn::GetAtt: [ BusRole, Arn ]
-            KinesisParameters:
-              PartitionKeyPath: $.detail.partitionKey
-            InputPath: $.detail
-
-    # EgressEventRule:
-    #   Type: AWS::Events::Rule
-    #   Properties:
-    #     EventBusName:
-    #       Ref: Bus
-    #     EventPattern:
-    #       source:
-    #         - external
-    #     State: ENABLED
-    #     Targets:
-    #       # add a target for each downstream subsystem
-    #       - Id: EgressY
-    #         Arn: ${self:custom.accounts.${opt:acct}.egressBuses.y}
-    #         RoleArn:
-    #           Fn::GetAtt: [ BusRole, Arn ]
-
-    # IngressStreamEventRule:
-    #   Type: AWS::Events::Rule
-    #   Properties:
-    #     EventBusName:
-    #       Ref: Bus
-    #     EventPattern:
-    #       source:
-    #         - external
-    #     State: ENABLED
-    #     Targets:
-    #       - Id: IngressStream
-    #         Arn:
-    #           Fn::GetAtt: [ IngressStream, Arn ]
-    #         RoleArn:
-    #           Fn::GetAtt: [ BusRole, Arn ]
-    #         KinesisParameters:
-    #           PartitionKeyPath: $.detail.partitionKey
-    #         InputPath: $.detail
-
-  Outputs:
-    busName:
-      Value:
-        Ref: Bus
-    busArn:
-      Value:
-        Fn::GetAtt: [ Bus, Arn ]
-
-    stream1Name:
-      Value:
-        Ref: Stream1
-    stream1Arn:
-      Value:
-        Fn::GetAtt: [ Stream1, Arn ]
-
-    # stream1Consumer1Name:
-    #   Value:
-    #     Fn::GetAtt: [ Stream1Consumer1, ConsumerName ]
-    # stream1Consumer1Arn:
-    #   Value:
-    #     Ref: Stream1Consumer1
-
-    # ingressStreamName:
-    #   Value:
-    #     Ref: IngressStream
-    # ingressStreamArn:
-    #   Value:
-    #     Fn::GetAtt: [ IngressStream, Arn ]
+  - ${file(serverless/bus.yml):resources}
+  # - ${file(serverless/cw.yml):resources}
+  # - ${file(serverless/schema.yml):resources}
+  # - ${file(serverless/global.yml):resources}
+  # - ${file(serverless/kinesis.yml):resources}
+  # - ${file(serverless/ingress.yml):resources}
+  # - ${file(serverless/egress.yml):resources}
+  # - ${file(serverless/conditions.yml)}
